--- a/static/styles/theme.css
+++ b/static/styles/theme.css
@@ -120,6 +120,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: background-color 0.3s, color 0.3s;
+  overflow-x: hidden;
 }
 
 ::selection {
